Smoll fixes